--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,7 @@
 # exemple pour mysql (driver mysql-connector-java-xxx.jar)
-JDBC_URL=jdbc:mysql://localhost/projetJEE
-DB_LOGIN=root
-DB_PASSWORD=newpassword
+JDBC_URL=jdbc:mysql://sql7.freemysqlhosting.net
+DB_LOGIN=sql7283170
+DB_PASSWORD=JqFlrkzzDc
 DB_DRIVER=com.mysql.cj.jdbc.Driver
 
 #exemple pour Oracle (driver ojdbcxx.jar)
